--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -32,3 +32,9 @@ h1,h2,h3,h4,h5,h6{
 .sidebar-brand{
     color: #fff!important;
 }
+.table{
+    color: #212529!important;
+}
+.exerciseDiv{
+    margin:3vh;
+}
